--- a/potion.html
+++ b/potion.html
@@ -11,7 +11,7 @@
 
       <a-assets>
         <a-asset-item id="cauldron" src="potion.gltf"></a-asset-item>
-
+        <a-text value="478"></a-text>
       </a-assets>
 
 
