--- a/narrtest.html
+++ b/narrtest.html
@@ -10,12 +10,12 @@
     <a-scene embedded arjs>
 
       <a-assets>
-        <a-asset-item id="map" src="VisualNarrProj2.gltf"></a-asset-item>
+        <a-asset-item id="cauldron" src="test.gltf"></a-asset-item>
 
       </a-assets>
 
 
-      <a-entity gltf-model="#map"></a-entity>
+      <a-entity gltf-model="#cauldron"></a-entity>
 
         <a-marker-camera preset='hiro'></a-marker-camera>
 
