--- a/key.html
+++ b/key.html
@@ -8,7 +8,7 @@
   <body style='margin : 0px; overflow: hidden; width: 100wh; height: 100vh'>
 
     <a-scene embedded arjs>
-
+   <a-text value="319"></a-text>
       <a-assets>
         <a-asset-item id="cauldron" src="key.gltf"></a-asset-item>
 
