--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
               <div class="middle">
                   <div class="logo"></div>
                   <h1 style="margin-top:40%">Wickedly Curious</h1>
-                  <p>Wickedly Curious is a story and digital or physical (Sheridan Oakville Campus)
-                     treasure hunt. You can win digital or physical awards! If you're a student
-                     needing a break from being stressed and homework, this is perfect for you!
+                  <p>Wickedly Curious is a story and digital treasure hunt. You can win digital awards! If you're in quarantine, this is the
+                     perfect way to fill up the time & practice social distancing!
                   </p><p>
 
                   </p><h2 style="margin-top:20%;">Digital Awards </h2>
@@ -33,11 +32,11 @@
                     <br>Downloadable Images
                     <br>Stress Relief
 
-                    </p><h2 style="margin-top:20%;">Physical Awards </h2>
+                    <!-- </p><h2 style="margin-top:20%;">Physical Awards </h2>
                     <p>Stickers
                     <br>Items (keychains &amp; more)
                     <br>Downloadable content
-                    <br>Stress Relief</p>
+                    <br>Stress Relief</p> -->
 
                     <h2 style="margin-top:20%;">Your Mission </h2>
                     <p><strong>Your Goal:</strong><br>Make messes and destroy everything as a witch's familiar.
@@ -50,7 +49,7 @@
                     <h3>Best experienced on Mobile!</h3>
 
 
-                    <div class="button">Start</div>
+                    <div class="button"><a href="chapter1.html" style="text-decoration: none; color:white;">Start</a></div>
 
                   </div>
 
