--- a/witch.html
+++ b/witch.html
@@ -30,7 +30,9 @@ You're one mischievous curious cat! Hope you had fun and it helped with a little
 
                   </p>
 
-                    <div class="button"><a href="chapter1.html" style="text-decoration: none; color:white;">Download Award</a></div>
+                    <div class="button"><a href="https://drive.google.com/drive/folders/12zXuIqtllK71-czimxXoeZj_fGEPXtnK" style="text-decoration: none; color:white;">Download Award</a></div>
+
+<div class="button"><a href="https://pixverse.club/crystal" style="text-decoration: none; color:white;">View AR Award</a></div>
 <div class="catbox" id="box" style="display:block"></div>
                   </div>
 
