--- a/flowerhuman.html
+++ b/flowerhuman.html
@@ -34,7 +34,8 @@ Hope this helped with a little stress reduction.
 
                   </p>
 
-                    <div class="button"><a href="chapter1.html" style="text-decoration: none; color:white;">Download Award</a></div>
+                    <div class="button"><a href="https://drive.google.com/drive/folders/12zXuIqtllK71-czimxXoeZj_fGEPXtnK" style="text-decoration: none; color:white;">Download Award</a></div>
+                    <div class="button"><a href="https://pixverse.club/crystal" style="text-decoration: none; color:white;">View AR Award</a></div>
 <div class="catbox" id="box" style="display:block"></div>
                   </div>
 
